--- a/home.html
+++ b/home.html
@@ -20,7 +20,22 @@
                         <div class="right-glasses"><p>•</p></div>
                     </div>
                     <div class="smile-bottom right"></div>
+                    <div class="arms round-borders row">
+                        <div class="leftarm kevinarm arm"></div>
+                        <div class="rightarm kevinarm arm"></div>
+                    </div>
+                    <div class="legs round-borders">
+                        <div></div>
+                        <div class="kevinleg leg">
+                            <div class="foot kevinfoot"></div>
+                        </div>
+                        <div class="kevinleg leg">
+                            <div class="foot kevinfoot"></div>
+                        </div>
+                        <div></div>
+                    </div>
                 </div>
+                <div class="kevincolor fill characters"></div>
             </div>
 
             <div class="thisislaura">
@@ -32,8 +47,22 @@
                         <p></p>
                     </div>
                     <div class="smile left"></div>
+                    <div class="arms round-borders row">
+                        <div class="leftarm lauraarm arm"></div>
+                        <div class="rightarm lauraarm arm"></div>
+                    </div>
+                    <div class="legs round-borders">
+                        <div></div>
+                        <div class="lauraleg leg">
+                            <div class="foot laurafoot"></div>
+                        </div>
+                        <div class="lauraleg leg">
+                            <div class="foot laurafoot"></div>
+                        </div>
+                        <div></div>
+                    </div>
                 </div>
-
+                <div class="lauracolor fill characters"></div>
             </div>
 
         </div>
