kevins arm waves

--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
                         <div></div>
                     </div>
                 </div>
-                <div class="kevincolor fill characters"></div>
+                <div class="kevincolor fillbody characters"></div>
             </div>
 
             <div class="thisislaura">
@@ -62,7 +62,7 @@
                         <div></div>
                     </div>
                 </div>
-                <div class="lauracolor fill characters"></div>
+                <div class="lauracolor fillbody characters"></div>
             </div>
 
         </div>
