--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
                         <div class="kevinleg leg">
                             <div class="foot kevinfoot"></div>
                         </div>
-                        <div class="kevinleg leg">
+                        <div class="kevinleg left leg">
                             <div class="foot kevinfoot"></div>
                         </div>
                         <div></div>
