--- a/home.html
+++ b/home.html
@@ -7,8 +7,16 @@
 
     <body>
         <div class="intro">
-            <h1>hi there sweet kevin!!!</h1>
-            <p>happy valentines day</p>
+            <div class="hithere row">
+                <p class="hearts one">&hearts;</p>
+                <p class="hearts two">&hearts;</p>
+                <p class="hearts three">&hearts;</p>
+                <p class="sweetkevin">hi there sweet kevin hehe</p>
+                <p class="hearts four">&hearts;</p>
+                <p class="hearts five">&hearts;</p>
+                <p class="hearts six">&hearts;</p>
+            </div>
+            <h1>happy valentines day !!!!</h1>
         </div>
 
         <div class="illustration">
@@ -65,6 +73,12 @@
                 <div class="lauracolor fillbody characters"></div>
             </div>
 
+
+
+        </div>
+
+        <div>
+            <a class="button" href="/pictures.html">click here!</a>
         </div>
     </body>
 </html>
