--- a/home.html
+++ b/home.html
@@ -80,5 +80,6 @@
         <div>
             <a class="button" href="/pictures.html">click here!</a>
         </div>
+        <div class="buttonfill"></div>
     </body>
 </html>
