dinoskate sort of working

--- a/pictures.html
+++ b/pictures.html
@@ -11,7 +11,6 @@
     <body>
         <div class="thisisus picturesection">
             <h1>this is us (kevin + laura forever) !!!!</h1>
-
             <div class="poloroids row">
                 <div class="poloroid leftside">
                     <img src="images/laurasnow.jpeg" alt="" >
@@ -24,19 +23,34 @@
                     <p>(taken by laura)</p>
                 </div>
             </div>
+            <div class="dinoskate">
+                <img class="dino" src="images/dinosaur.png" alt="">
+                <img class="skate" src="images/skateboard.png" alt="">
+            </div>
 
-
+            <div class="divide"></div>
         </div>
 
 
-        <div class="picturesection row">
-            <div class="carousel">
-                <div class="border">
+
+        <div class="carouselpics picturesection row">
+            <div class="carousel border row">
+                <button class="carbut"></button>
+                <div class="picture">
+                    <img class="border" src="images/lindustrie.jpeg" alt="" >
                 </div>
+                <button class="carbut"></button>
             </div>
+
             <div class="pictureintro">
-                <h1>happy recent memories !!</h1>
+                <h1>yummy foods recently</h1>
                 <p>here is a little carousel of things that made me happy with you in the past few months</p>
+            </div>
+        </div>
+
+        <div class="photostrip">
+            <div class="text">
+                <h1>more happy memories!!</h1>
             </div>
         </div>
     </body>
