--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <div>
-            <a class="button" href="/pictures.html">click here!</a>
+            <a class="button" href="pictures.html">click here!</a>
         </div>
         <div class="buttonfill"></div>
     </body>
