--- a/pictures.html
+++ b/pictures.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <div class="thisisus picturesection">
+        <div class="thisisus picturesection pagesection">
             <h1>this is us (kevin + laura forever) !!!!</h1>
             <div class="poloroids row">
                 <div class="poloroid leftside">
@@ -33,7 +33,7 @@
 
 
 
-        <div class="carouselpics picturesection row">
+        <div class="carouselpics picturesection smallcontent pagesection row">
             <div class="carousel border row">
                 <button class="carbut"></button>
                 <div class="picture">
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <div class="photostrip">
+        <div class="photostrip pagesection">
             <div class="text">
                 <h1>more happy memories!!</h1>
             </div>
