--- a/explore.html
+++ b/explore.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>hi there!!!</title>
+        <title>explore</title>
         <link rel="stylesheet" type="text/css" href="styles/site.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,11 +46,11 @@
 
                 <div class="navbuttons">
                     <div class="navbutton-container">
-                        <a class="navbutton" href="pictures.html">pictures</a>
+                        <a class="navbutton" href="playground.html">playground!</a>
                         <div class="navbuttonfill"></div>
                     </div>
                     <div class="navbutton-container">
-                        <a class="navbutton" href="playground.html">playground!</a>
+                        <a class="navbutton" href="pictures.html">pictures</a>
                         <div class="navbuttonfill"></div>
                     </div>
                     <div class="navbutton-container">
