--- a/playground.html
+++ b/playground.html
@@ -22,13 +22,18 @@
                 <div class="skate-ground"></div>
             </div>
 
-            <div class="pagesection seesaw center-flex">
-                <div class="bears">
-                    <img class="teddy" src="images/teddy-bear.png" alt="">
-                    <img class="ted" src="images/ted.png" alt="">
+            <div class="pagesection center-flex">
+                <div class="seesaw">
+                    <div class="bears center-block">
+                        <img class="teddy" src="images/teddy-bear.png" alt="">
+                        <img class="ted" src="images/ted.png" alt="">
+                    </div>
+                    <div class="board center-block"></div>
                 </div>
-                <div class="board center-flex"></div>
+                <div class="seesaw-center center-block"></div>
             </div>
+
+
         </div>
 
 
