--- a/playground.html
+++ b/playground.html
@@ -10,10 +10,26 @@
 
     <body>
         <div class="smallcontent center-flex">
-            <div class="pagesection dinoskate-container center-flex">
+            <div class="pagesection center-flex">
                 <div class="playground-intro center-flex">
-                    <h1 class="center-flex">this is the playground!</h1>
-                    <p>watch our babies have so much fun!!!! weeeeee</p>
+                    <h1 class="center-flex">the playground:</h1>
+                    <p>designed for dino, dano, ted, bartholomew, and stubby to have all the fun in the world!!</p>
+                </div>
+                <div class="family-portrait row center-flex">
+                    <img class="deeno" src="images/dinosaur.png" alt="">
+                    <img class="stubby" src="images/capybara.png" alt="">
+                    <img class="tedtwo" src="images/teddy-bear.png" alt="">
+                    <img class="bartholomew" src="images/ted.png" alt="">
+                    <img class="dano" src="images/dino.png" alt="">
+
+                </div>
+
+            </div>
+
+            <div class="dinoskate-container pagesection center-flex">
+                <div>
+                    <h1>you've found the skate park!</h1>
+                    <p>dino and dano are busy practicing their skatboarding and rollerblading skills!! make sure to not bother them while they are hard at work</p>
                 </div>
                 <div class="dinoskate">
                     <img class="dino" src="images/dinosaur.png" alt="">
@@ -23,6 +39,10 @@
             </div>
 
             <div class="pagesection center-flex">
+                <div>
+                    <h1>here is the seewsaw:</h1>
+                    <p>ted and bartholomew may be incredibly different in size, but they are both just bears who love to play!!!</p>
+                </div>
                 <div class="seesaw">
                     <div class="bears center-block">
                         <img class="teddy" src="images/teddy-bear.png" alt="">
