dino dano skating

--- a/playground.html
+++ b/playground.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Nothing+You+Could+Do&family=Oswald:wght@700&display=swap" rel="stylesheet">
     </head>
 
-    <body>
+    <body class="playground">
         <div class="smallcontent center-flex">
             <div class="pagesection center-flex">
                 <div class="playground-intro center-flex">
@@ -21,9 +21,7 @@
                     <img class="tedtwo" src="images/teddy-bear.png" alt="">
                     <img class="bartholomew" src="images/ted.png" alt="">
                     <img class="dano" src="images/dino.png" alt="">
-
                 </div>
-
             </div>
 
             <div class="dinoskate-container pagesection center-flex">
@@ -31,11 +29,23 @@
                     <h1>you've found the skate park!</h1>
                     <p>dino and dano are busy practicing their skatboarding and rollerblading skills!! make sure to not bother them while they are hard at work</p>
                 </div>
-                <div class="dinoskate">
-                    <img class="dino" src="images/dinosaur.png" alt="">
-                    <img class="skate" src="images/skateboard.png" alt="">
+                <div class="deenoskate">
+                    <div class="dinoskate">
+                        <img class="dino" src="images/dinosaur.png" alt="">
+                        <img class="skate" src="images/skateboard.png" alt="">
+                    </div>
+                    <div class="skate-ground"></div>
                 </div>
-                <div class="skate-ground"></div>
+                <div>
+                    <div class="danoskate">
+                        <img class="danoskating dano" src="images/dino.png" alt="">
+                        <div class="rollerblades">
+                            <img class="rollerskate" src="images/roller-skate.png" alt="">
+                            <img class="rollerskate" src="images/roller-skate.png" alt="">
+                        </div>
+                    </div>
+                    <div class="skate-ground"></div>
+                </div>
             </div>
 
             <div class="pagesection center-flex">
