minor index spacing changes

--- a/playground.html
+++ b/playground.html
@@ -50,7 +50,7 @@
 
             <div class="pagesection center-flex">
                 <div>
-                    <h1>here is the seewsaw:</h1>
+                    <h1>seesaw time!</h1>
                     <p>ted and bartholomew may be incredibly different in size, but they are both just bears who love to play!!!</p>
                 </div>
                 <div class="seesaw">
