--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="styles/site.css">
     </head>
 
-    <body class="center-flex pagesection">
+    <body class="center-flex pagesection index">
         <div class="intro">
             <div class="hithere row">
                 <p class="hearts one">&hearts;</p>
