--- a/playground.html
+++ b/playground.html
@@ -63,6 +63,15 @@
                 <div class="seesaw-center center-block"></div>
             </div>
 
+            <div class="pagesection center-flex stubbylight">
+                <div>
+                    <h1>stubby loves sunbathing!</h1>
+                    <p>hover over stubby to light him up!!!</p>
+                </div>
+                <div class="stubbycontainer center-block">
+                    <img class="stubbysun" src="images/capybara.png" alt="">
+                </div>
+            </div>
 
         </div>
 
