playground final touches

--- a/playground.html
+++ b/playground.html
@@ -71,6 +71,16 @@
                 <div class="stubbycontainer center-block">
                     <img class="stubbysun" src="images/capybara.png" alt="">
                 </div>
+                <div class="grasses row center-flex">
+                    <div></div>
+                    <img class="grass" src="images/grass.png" alt="">
+                    <img class="grass" src="images/grass.png" alt="">
+                    <img class="grass" src="images/grass.png" alt="">
+                    <img class="grass" src="images/grass.png" alt="">
+                    <img class="grass" src="images/grass.png" alt="">
+                    <img class="grass" src="images/grass.png" alt="">
+                    <div></div>
+                </div>
             </div>
 
         </div>
