--- a/pictures.html
+++ b/pictures.html
@@ -10,7 +10,8 @@
 
     <body>
         <div class="thisisus picturesection pagesection">
-            <h1>this is us (kevin + laura forever) !!!!</h1>
+            <h1>photo gallery:</h1>
+            <p class="blurb">here are lots and lots of pictures from our recent happy memories!!</p>
             <div class="poloroids row">
                 <div class="poloroid leftside">
                     <img src="images/laurasnow.jpeg" alt="" >
@@ -23,30 +24,72 @@
                     <p>(taken by laura)</p>
                 </div>
             </div>
-            <div class="divide"></div>
         </div>
 
 
+        <div class="stringlights grasses row center-flex">
+            <img class="grass stars" src="images/stars.png" alt="" >
+            <img class="grass light1" src="images/christmas-lights.png" alt="" >
+            <img class="grass light2" src="images/christmas-lights.png" alt="" >
+            <img class="grass light3" src="images/christmas-lights.png" alt="" >
+            <img class="grass light4" src="images/christmas-lights.png" alt="" >
+            <img class="grass light5" src="images/christmas-lights.png" alt="" >
+            <img class="grass stars" src="images/stars.png" alt="" >
+        </div>
 
-        <div class="carouselpics picturesection smallcontent pagesection row">
-            <div class="carousel border row">
-                <button class="carbut"></button>
-                <div class="picture">
-                    <img class="border" src="images/lindustrie.jpeg" alt="" >
-                </div>
-                <button class="carbut"></button>
+        <div class="poloroidcollage smallcontent  grid center-flex">
+            <div class="poloroid">
+                <img src="images/lindustrie.jpeg" alt="" >
+                <p>lindustrie!</p>
+            </div>
+            <div class="poloroid">
+                <img src="images/kevinchairdino.jpeg" alt="" >
+                <p>work time w dino</p>
+            </div>
+            <div class="poloroid">
+                <img src="images/laurabed.jpeg" alt="" >
+                <p>fam naptime</p>
+            </div>
+            <div class="poloroid">
+                <img src="images/kevingenesis.jpeg" alt="" >
+                <p>kevin @ genesis</p>
             </div>
 
-            <div class="pictureintro">
-                <h1>yummy foods recently</h1>
-                <p>here is a little carousel of things that made me happy with you in the past few months</p>
+            <div class="poloroid">
+                <img src="images/kevinbed.jpeg" alt="" >
+                <p>fam naptime x2</p>
+            </div>
+            <div class="poloroid">
+                <img src="images/statlermirror.jpeg" alt="" >
+                <p>after statler din</p>
+            </div>
+            <div class="poloroid">
+                <img src="images/beatrice.jpeg" alt="" >
+                <p>visiting beatrice</p>
+            </div>
+            <div class="poloroid">
+                <img src="images/aritzia.jpeg" alt="" >
+                <p>aritzia!!</p>
+            </div>
+
+            <div class="poloroid">
+                <img src="images/711.jpeg" alt="" >
+                <p>7eleven snack run</p>
+            </div>
+            <div class="poloroid">
+                <img src="images/laurabday.jpeg" alt="" >
+                <p>laura bday</p>
+            </div>
+            <div class="poloroid">
+                <img src="images/risotto.jpeg" alt="" >
+                <p>truffle risotto</p>
+            </div>
+            <div class="poloroid">
+                <img src="images/chaichai.jpeg" alt="" >
+                <p>kevin and chaichai</p>
             </div>
         </div>
 
-        <div class="photostrip pagesection">
-            <div class="text">
-                <h1>more happy memories!!</h1>
-            </div>
-        </div>
+
     </body>
 </html>
