--- a/playground.html
+++ b/playground.html
@@ -66,7 +66,7 @@
             <div class="pagesection center-flex stubbylight">
                 <div>
                     <h1>stubby loves sunbathing!</h1>
-                    <p>hover over stubby to light him up!!!</p>
+                    <p>stubby is chilling out in a little field of grass. hover over stubby to light him up and give him some warmth!!!</p>
                 </div>
                 <div class="stubbycontainer center-block">
                     <img class="stubbysun" src="images/capybara.png" alt="">
