some final touches

--- a/bucketlist.html
+++ b/bucketlist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>hi there!!!</title>
+        <title>bucketlist</title>
         <link rel="stylesheet" type="text/css" href="styles/site.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
