--- a/explore.html
+++ b/explore.html
@@ -42,6 +42,7 @@
                         <div class="lauracolor fillbody characters center-block"></div>
                     </div>
                     <h3 class="center-block">click any button to explore more!!!!!</h3>
+                    <p class="center-block small-text">p.s. this website literally will be so ugly on mobile so please only view it on a laptop!</p>
                 </div>
 
                 <div class="navbuttons">
@@ -58,7 +59,7 @@
                         <div class="navbuttonfill"></div>
                     </div>
                     <div class="navbutton-container">
-                        <a class="navbutton" href="bucketlist.html">bucketlist</a>
+                        <a class="navbutton" href="index.html">opening page</a>
                         <div class="navbuttonfill"></div>
                     </div>
                 </div>
