--- a/letter.html
+++ b/letter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>hi there!!!</title>
+        <title>lovenote</title>
         <link rel="stylesheet" type="text/css" href="styles/site.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
             <div class="letter center-flex center-block-y">
 
                 <h1 id="hello">you've found your vday letter!!</h1>
-                <p class="blurb">hover over the envelope flap top open it up</p>
+                <p class="blurb">hover over the envelope to open it up</p>
 
                 <div class="envelope-container">
                     <div class="flapheart" id="flapheart">
