letter heading animation

--- a/letter.html
+++ b/letter.html
@@ -16,7 +16,7 @@
         <div class="letter-container smallcontent center-flex flex-col">
             <div class="letter center-flex center-block-y">
 
-                <h1 id="hello">you've found your vday letter!!</h1>
+                <h1>you've found your vday letter!!</h1>
                 <p class="blurb">hover over the envelope to open it up</p>
 
                 <div class="envelope-container">
