mobile media query dinoskating

--- a/playground.html
+++ b/playground.html
@@ -29,19 +29,22 @@
                     <h1>you've found the skate park!</h1>
                     <p>dino and dano are busy practicing their skatboarding and rollerblading skills!! make sure to not bother them while they are hard at work</p>
                 </div>
-                <div class="deenoskate">
+                <div class="deenoskate-container">
                     <div class="dinoskate">
                         <img class="dino" src="images/dinosaur.png" alt="">
                         <img class="skate" src="images/skateboard.png" alt="">
                     </div>
                     <div class="skate-ground"></div>
+
                 </div>
-                <div>
+                <div class="danoskate-container">
                     <div class="danoskate">
-                        <img class="danoskating dano" src="images/dino.png" alt="">
+                        <img class="danoskating" src="images/dino.png" alt="">
                         <div class="rollerblades">
+                            <div class="rollerskate"></div>
                             <img class="rollerskate" src="images/roller-skate.png" alt="">
                             <img class="rollerskate" src="images/roller-skate.png" alt="">
+                            <div class="rollerskate"></div>
                         </div>
                     </div>
                     <div class="skate-ground"></div>
