stubby lightups on click on mobile

--- a/playground.html
+++ b/playground.html
@@ -6,6 +6,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Nothing+You+Could+Do&family=Oswald:wght@700&display=swap" rel="stylesheet">
+
+        <script src="scripts/jquery-3.7.1.min.js"></script>
+        <script src="scripts/stubby.js"></script>
     </head>
 
     <body class="playground">
@@ -69,7 +72,7 @@
             <div class="pagesection center-flex stubbylight">
                 <div>
                     <h1>stubby loves sunbathing!</h1>
-                    <p>stubby is chilling out in a little field of grass. hover over stubby to light him up and give him some warmth!!!</p>
+                    <p>stubby is chilling out in a little field of grass. hover over (or click on) stubby to light him up and give him some warmth!!!</p>
                 </div>
                 <div class="stubbycontainer center-block">
                     <img class="stubbysun" src="images/capybara.png" alt="">
