gallery mobile media query

--- a/pictures.html
+++ b/pictures.html
@@ -10,18 +10,20 @@
 
     <body>
         <div class="thisisus picturesection pagesection">
-            <h1>photo gallery:</h1>
-            <p class="blurb">here are lots and lots of pictures from our recent happy memories!!</p>
-            <div class="poloroids row">
-                <div class="poloroid leftside">
-                    <img src="images/laurasnow.jpeg" alt="" >
-                    <p>laura in the snow!</p>
-                    <p>(taken by kevin)</p>
-                </div>
-                <div class="poloroid rightside">
-                    <img src="images/kevinsnow.jpeg" alt="" >
-                    <p>kevin in the snow!</p>
-                    <p>(taken by laura)</p>
+            <div>
+                <h1>photo gallery:</h1>
+                <p class="blurb">here are lots and lots of pictures from our recent happy memories!!</p>
+                <div class="poloroids row">
+                    <div class="poloroid leftside">
+                        <img src="images/laurasnow.jpeg" alt="" >
+                        <p>laura in the snow!</p>
+                        <p>(taken by kevin)</p>
+                    </div>
+                    <div class="poloroid rightside">
+                        <img src="images/kevinsnow.jpeg" alt="" >
+                        <p>kevin in the snow!</p>
+                        <p>(taken by laura)</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -37,7 +39,7 @@
             <img class="grass stars" src="images/stars.png" alt="" >
         </div>
 
-        <div class="poloroidcollage smallcontent  grid center-flex">
+        <div class="poloroidcollage smallcontent grid center-flex">
             <div class="poloroid">
                 <img src="images/lindustrie.jpeg" alt="" >
                 <p>lindustrie!</p>
