poloroid hover to js file

--- a/pictures.html
+++ b/pictures.html
@@ -6,6 +6,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Nothing+You+Could+Do&family=Oswald:wght@700&display=swap" rel="stylesheet">
+
+        <script src="scripts/jquery-3.7.1.min.js"></script>
+        <script src="scripts/poloroid.js"></script>
     </head>
 
     <body>
@@ -40,53 +43,53 @@
         </div>
 
         <div class="poloroidcollage smallcontent grid center-flex">
-            <div class="poloroid">
+            <div class="poloroid" id="1">
                 <img src="images/lindustrie.jpeg" alt="" >
                 <p>lindustrie!</p>
             </div>
-            <div class="poloroid">
+            <div class="poloroid" id="2">
                 <img src="images/kevinchairdino.jpeg" alt="" >
                 <p>work time w dino</p>
             </div>
-            <div class="poloroid">
+            <div class="poloroid" id="3">
                 <img src="images/laurabed.jpeg" alt="" >
                 <p>fam naptime</p>
             </div>
-            <div class="poloroid">
+            <div class="poloroid" id="4">
                 <img src="images/kevingenesis.jpeg" alt="" >
                 <p>kevin @ genesis</p>
             </div>
 
-            <div class="poloroid">
+            <div class="poloroid" id="5">
                 <img src="images/kevinbed.jpeg" alt="" >
                 <p>fam naptime x2</p>
             </div>
-            <div class="poloroid">
+            <div class="poloroid" id="6">
                 <img src="images/statlermirror.jpeg" alt="" >
                 <p>after statler din</p>
             </div>
-            <div class="poloroid">
+            <div class="poloroid" id="7">
                 <img src="images/beatrice.jpeg" alt="" >
                 <p>visiting beatrice</p>
             </div>
-            <div class="poloroid">
+            <div class="poloroid" id="8">
                 <img src="images/aritzia.jpeg" alt="" >
                 <p>aritzia!!</p>
             </div>
 
-            <div class="poloroid">
+            <div class="poloroid" id="9">
                 <img src="images/711.jpeg" alt="" >
                 <p>7eleven snack run</p>
             </div>
-            <div class="poloroid">
+            <div class="poloroid" id="10">
                 <img src="images/laurabday.jpeg" alt="" >
                 <p>laura bday</p>
             </div>
-            <div class="poloroid">
+            <div class="poloroid" id="11">
                 <img src="images/risotto.jpeg" alt="" >
                 <p>truffle risotto</p>
             </div>
-            <div class="poloroid">
+            <div class="poloroid" id="12">
                 <img src="images/chaichai.jpeg" alt="" >
                 <p>kevin and chaichai</p>
             </div>
