pictures mobile final touches

--- a/pictures.html
+++ b/pictures.html
@@ -11,7 +11,7 @@
         <script src="scripts/poloroid.js"></script>
     </head>
 
-    <body>
+    <body class="pictures">
         <div class="thisisus picturesection pagesection">
             <div>
                 <h1>photo gallery:</h1>
@@ -32,7 +32,7 @@
         </div>
 
 
-        <div class="stringlights grasses row center-flex">
+        <div class="stringlights row center-flex">
             <img class="grass stars" src="images/stars.png" alt="" >
             <img class="grass light1" src="images/christmas-lights.png" alt="" >
             <img class="grass light2" src="images/christmas-lights.png" alt="" >
