--- a/letter.html
+++ b/letter.html
@@ -20,12 +20,12 @@
                 <p class="blurb">hover over the envelope to open it up</p>
 
                 <div class="envelope-container">
-                    <div class="flapheart" id="flapheart">
-                        <img class="heart center-block-x" src="images/heart.png" alt="">
-                        <div class="envelope-flap center-block-x"></div>
-
-                    </div>
                     <div class="envelope"></div>
+                    <div class="flapheart" id="flapheart">
+                        <div class="envelope-flap center-block-x"></div>
+                        <img class="heart" src="images/heart.png" alt="">
+                    </div>
+
                     <div class="paper center-block-x hidden" id="letterpaper">
                         <p class="leftalign">hi sweet kevin!!</p>
 
