--- a/letter.html
+++ b/letter.html
@@ -17,7 +17,7 @@
             <div class="letter center-flex center-block-y">
 
                 <h1>you've found your vday letter!!</h1>
-                <p class="blurb">hover over the envelope to open it up</p>
+                <p class="blurb">hover over (or click on) the envelope to open it up</p>
 
                 <div class="envelope-container">
                     <div class="envelope"></div>
