added back arrow on nav

--- a/bucketlist.html
+++ b/bucketlist.html
@@ -9,5 +9,8 @@
     </head>
 
     <body>
+        <div class="explore pagesection center-flex smallcontent">
+            <h1>our little bucketlist</h1>
+        </div>
     </body>
 </html>
