--- a/explore.html
+++ b/explore.html
@@ -10,8 +10,9 @@
 
     <body>
         <div class="explore pagesection center-flex smallcontent">
-            <div class="">
-                <h1>welcome to our world!!</h1>
+            <div class="row toppy">
+                <a class="back-arrow" href="index.html">⬅</a>
+                <h1 class="">welcome to our world!!</h1>
             </div>
             <div class="row">
                 <div class="exploreleft center-block">
