--- a/bucketlist.html
+++ b/bucketlist.html
@@ -9,8 +9,17 @@
     </head>
 
     <body>
-        <div class="explore pagesection center-flex smallcontent">
+        <div class="bucketlist pagesection center-flex smallcontent">
             <h1>our little bucketlist</h1>
+            <p class="teensietiny">if u want to add anything, go text ur sweet laura please!!</p>
+            <div class="list">
+                <p class="leftalign">☐ the bern</p>
+                <p class="leftalign">☐ make matching rings from the bars!!</p>
+                <p class="leftalign">☐ kevin no back pain hehe</p>
+                <p class="leftalign checked">☑ first international trip together</p>
+                <p class="leftalign">☐ kevin gets return offer from amazon wahoooo</p>
+                <p class="leftalign">☐ full time jobs in the same city</p>
+            </div>
         </div>
     </body>
 </html>
