--- a/explore.html
+++ b/explore.html
@@ -60,7 +60,7 @@
                         <div class="navbuttonfill"></div>
                     </div>
                     <div class="navbutton-container">
-                        <a class="navbutton" href="index.html">opening page</a>
+                        <a class="navbutton" href="bucketlist.html">bucket list</a>
                         <div class="navbuttonfill"></div>
                     </div>
                 </div>
