better bucketlist styling

--- a/bucketlist.html
+++ b/bucketlist.html
@@ -25,10 +25,13 @@
                         <div class="list">
                             <p class="leftalign">☐ the bern</p>
                             <p class="leftalign">☐ make matching rings from the bars!!</p>
+                            <p id="lauragrad" class="leftalign checked">☑ laura graduation + grad pics together</p>
                             <p class="leftalign">☐ kevin no back pain hehe</p>
                             <p id="inttrip" class="leftalign checked">☑ first international trip together</p>
                             <p class="leftalign">☐ kevin gets return offer from amazon wahoooo</p>
                             <p class="leftalign">☐ full time jobs in the same city</p>
+                            <p class="leftalign">☐ kevin learns to brush his teeth every single night consistently forever</p>
+                            <p class="leftalign">☐ kevin quant offer !!!!!</p>
                         </div>
                     </div>
                 </div>
@@ -36,14 +39,22 @@
                     <div class="book-right left center-flex flex-row">
                         <p id="text" class="">hover over any completed bucketlist item to reveal memories!!!</p>
                         <div id="inttrip1" class="flex-column hidden">
-                            <img src="images/jungsik.jpg" alt="" >
-                            <img src="images/jungsikdessert.JPG" alt="" >
-                            <img src="images/reggie.JPG" alt="" >
+                            <img src="images/jungsik.JPEG" alt="" >
+                            <img src="images/jungsikdessert.JPEG" alt="" >
+                            <img src="images/reggie.JPEG" alt="" >
                         </div>
                         <div id="inttrip2" class="flex-column hidden">
-                            <img src="images/orangedessert.JPG" alt="" >
-                            <img src="images/fushimiinar.jpg" alt="" >
-                            <img src="images/tokyo.jpg" alt="" >
+                            <img src="images/tokyodessert.JPEG" alt="" >
+                            <img src="images/fushimiinari.JPEG" alt="" >
+                            <img src="images/tokyorain.JPEG" alt="" >
+                        </div>
+                        <div id="lauragrad1" class="flex-column hidden">
+                            <img src="images/kevingaze.jpg" alt="" >
+                            <img src="images/holdinghands.JPEG" alt="" >
+                        </div>
+                        <div id="lauragrad2" class="flex-column hidden">
+                            <img src="images/fullbodylk.JPEG" alt="" >
+                            <img src="images/kevinseeslaura.JPEG" alt="" >
                         </div>
                     </div>
                 </div>
