--- a/bucketlist.html
+++ b/bucketlist.html
@@ -28,7 +28,7 @@
                             <p id="lauragrad" class="leftalign checked">☑ laura graduation + grad pics together</p>
                             <p class="leftalign">☐ kevin no back pain hehe</p>
                             <p id="inttrip" class="leftalign checked">☑ first international trip together</p>
-                            <p class="leftalign">☐ kevin gets return offer from amazon wahoooo</p>
+                            <p id="amazon" class="leftalign checked">☑ kevin gets return offer from amazon wahoooo</p>
                             <p class="leftalign">☐ full time jobs in the same city</p>
                             <p class="leftalign">☐ kevin learns to brush his teeth every single night consistently forever</p>
                             <p class="leftalign">☐ kevin quant offer !!!!!</p>
@@ -55,6 +55,14 @@
                         <div id="lauragrad2" class="flex-column hidden">
                             <img src="images/fullbodylk.JPEG" alt="" >
                             <img src="images/kevinseeslaura.JPEG" alt="" >
+                        </div>
+                        <div id="amazon1" class="flex-column hidden">
+                            <img src="images/commute.JPG" alt="" >
+                            <img src="images/firstday.jpg" alt="" >
+                        </div>
+                        <div id="amazon2" class="flex-column hidden">
+                            <img src="images/work-stroll.jpg" alt="" >
+                            <img src="images/working.jpg" alt="" >
                         </div>
                     </div>
                 </div>
